@@ -14,7 +14,7 @@ struct memcached_stock *global_memcached_stock;
 
 struct http_cache *global_http_cache;
 
-struct fcgi_stock *global_fcgi_stock;
+struct hstock *global_fcgi_stock;
 
 struct filter_cache *global_filter_cache;
 
